// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LastLoginScreen renders correct buttonLabel uses SOCIAL_STRATEGY mapping when there is not a lastUsedUsername 1`] = `
<DocumentFragment>
  <div
    data-__type="quick_auth_pane"
    data-alternativelabel="notYourAccountAction"
    data-buttonlabel="Twitter"
    data-header="[object Object]"
    data-strategy="twitter"
  />
</DocumentFragment>
`;

exports[`LastLoginScreen renders correct buttonLabel uses lastUsedConnectionName when there is not a lastUsedUsername and no SOCIAL_STRATEGY mapping 1`] = `
<DocumentFragment>
  <div
    data-__type="quick_auth_pane"
    data-alternativelabel="notYourAccountAction"
    data-buttonlabel="lastUsedConnection"
    data-header="[object Object]"
    data-strategy="auth0"
  />
</DocumentFragment>
`;

exports[`LastLoginScreen renders correct icon when strategy is adfs 1`] = `
<DocumentFragment>
  <div
    data-__type="quick_auth_pane"
    data-alternativelabel="notYourAccountAction"
    data-buttonlabel="lastUsedUsername"
    data-header="[object Object]"
    data-strategy="windows"
  />
</DocumentFragment>
`;

exports[`LastLoginScreen renders correct icon when strategy is empty, use name instead 1`] = `
<DocumentFragment>
  <div
    data-__type="quick_auth_pane"
    data-alternativelabel="notYourAccountAction"
    data-buttonlabel="lastUsedUsername"
    data-header="[object Object]"
    data-strategy="auth0"
  />
</DocumentFragment>
`;

exports[`LastLoginScreen renders correct icon when strategy is google-apps 1`] = `
<DocumentFragment>
  <div
    data-__type="quick_auth_pane"
    data-alternativelabel="notYourAccountAction"
    data-buttonlabel="lastUsedUsername"
    data-header="[object Object]"
    data-strategy="google-apps"
  />
</DocumentFragment>
`;

exports[`LastLoginScreen renders correct icon when strategy is office365 1`] = `
<DocumentFragment>
  <div
    data-__type="quick_auth_pane"
    data-alternativelabel="notYourAccountAction"
    data-buttonlabel="lastUsedUsername"
    data-header="[object Object]"
    data-strategy="windows"
  />
</DocumentFragment>
`;

exports[`LastLoginScreen renders correct icon when strategy is some-other-strategy 1`] = `
<DocumentFragment>
  <div
    data-__type="quick_auth_pane"
    data-alternativelabel="notYourAccountAction"
    data-buttonlabel="lastUsedUsername"
    data-header="[object Object]"
    data-strategy="auth0"
  />
</DocumentFragment>
`;

exports[`LastLoginScreen renders correct icon when strategy is this-strategy-exists 1`] = `
<DocumentFragment>
  <div
    data-__type="quick_auth_pane"
    data-alternativelabel="notYourAccountAction"
    data-buttonlabel="lastUsedUsername"
    data-header="[object Object]"
    data-strategy="auth0"
  />
</DocumentFragment>
`;

exports[`LastLoginScreen renders correct icon when strategy is waad 1`] = `
<DocumentFragment>
  <div
    data-__type="quick_auth_pane"
    data-alternativelabel="notYourAccountAction"
    data-buttonlabel="lastUsedUsername"
    data-header="[object Object]"
    data-strategy="windows"
  />
</DocumentFragment>
`;

exports[`LastLoginScreen renders correctly 1`] = `
<DocumentFragment>
  <div
    data-__type="quick_auth_pane"
    data-alternativelabel="notYourAccountAction"
    data-buttonlabel="lastUsedUsername"
    data-header="[object Object]"
    data-strategy="auth0"
  />
</DocumentFragment>
`;

exports[`LastLoginScreen renders with custom connection theme 1`] = `
<DocumentFragment>
  <div
    data-__type="quick_auth_pane"
    data-alternativelabel="notYourAccountAction"
    data-buttonicon="icon"
    data-buttonlabel="lastUsedUsername"
    data-foregroundcolor="foregroundColor"
    data-header="[object Object]"
    data-primarycolor="primaryColor"
    data-strategy="auth0"
  />
</DocumentFragment>
`;
